# jcal

./: .gitignore  README.md
docs/: jalali.html  jcal.html  jdate.html  jstrftime.html  jstrptime.html
sources/: AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  TODO.md  autogen.sh  configure.ac  gitlog2changelog.py  setup.py
sources/libjalali/: Makefile.am  jalali.c  jalali.h  jconfig.h  jtime.c  jtime.h
sources/man/: Makefile.am  jcal.1  jctime.3  jdate.1  jstrftime.3  jstrptime.3
sources/pyjalali/: __init__.py  datetime.py  helpers.py  jalali.py  jstr.py  jtime.py  types.py
sources/src/: Makefile.am  jcal.c  jcal.h  jdate.c  jdate.h  termcap.h
sources/test_kit/: Makefile.am
sources/test_kit/jalali/: Makefile.am  elc.c  get_date.c  get_diff.c  jalali_update.c  jyinfo.c  leap.c  leap_range.c  sec_converter.c
sources/test_kit/jtime/: Makefile.am  jasctime.c  jctime.c  jgmtime.c  jlocaltime.c  jmktime.c  jstrftime.c  jstrptime.c
