# Makefile.am - Tools for manipulating Jalali representation of Iranian calendar
# and necessary conversations to Gregorian calendar.
# Copyright (C) 2006-2011 Ashkan Ghassemi.
#
# This file is part of libjalali.
#
# libjalali is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libjalali is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with libjalali.  If not, see <https://www.gnu.org/licenses/>.

man_MANS = jalali_create_date_from_days.3 jalali_get_date.3 jalali_update.3\
	jctime.3 jgmtime_r.3 jstrftime.3 jalali_create_days_from_date.3\
	jalali_get_diff.3 jasctime.3 jctime_r.3 jlocaltime.3 jstrptime.3\
	jalali_create_secs_from_time.3 jalali_get_jyear_info.3 jasctime_r.3\
	jdate.1 jlocaltime_r.3 jalali_create_time_from_secs.3 jalali_is_jleap.3\
	jcal.1 jgmtime.3 jmktime.3
EXTRA_DIST = $(man_MANS)
